fix(errors): getFirst() instead of get(0)